--- a/task.html
+++ b/task.html
@@ -8,7 +8,7 @@
     <label>
         <input id="input-box" placeholder="Add your task">
     </label>
-        <button onclick="render()"> Add </button>
+        <button onclick="addTask()"> Add </button>
     <div class="container"></div>
     <script src="rabotaet.js"></script>
 </body>
