--- a/task.html
+++ b/task.html
@@ -9,7 +9,9 @@
         <input id="input-box" placeholder="Add your task">
     </label>
         <button onclick="addTask()"> Add </button>
-    <div class="container"></div>
+    <div class="container">
+
+    </div>
     <script src="rabotaet.js"></script>
 </body>
 </html>
