--- a/task.html
+++ b/task.html
@@ -8,7 +8,7 @@
     <label>
         <input id="input-box" placeholder="Add your task">
     </label>
-        <button onclick="addTask()"> Add </button>
+        <button onclick="task()"> Add </button>
     <div class="container">
 
     </div>
